--- a/Nascar.Api/Properties/launchSettings.json
+++ b/Nascar.Api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://iamnascarapi.azurewebsites.net:42647",
+      "applicationUrl": "http://iamnascarapi.azurewebsites.net:42647",
       "sslPort": 44304
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://iamnascarapi.azurewebsites.net:7149;https://iamnascarapi.azurewebsites.net:5285",
+      "applicationUrl": "https://iamnascarapi.azurewebsites.net:7149;http://iamnascarapi.azurewebsites.net:5285",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
