Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_iamnascarapi.yml
+++ b/.github/workflows/master_iamnascarapi.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - IAMNASCARAPI
+name: Build and deploy ASP.Net Core app to Azure Web App - iamnascarapi
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '3.1'
           include-prerelease: true
 
       - name: Build with dotnet
@@ -40,18 +40,27 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F8DF7B5519504E15A630E47AAAAD1A74 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_31BFD6562F934D8DBA09CB970D7B3D72 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3AE2F8B6B0B6436F998DCAA2DE13C1D2 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'IAMNASCARAPI'
+          app-name: 'iamnascarapi'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0B2D7F5B931D43B097BC333586AD337A }}
           package: .
+          
